packages/v2/CHANGELOG.md
# @traderjoe-xyz/sdk-v2

## 3.0.30

### Patch Changes

- ab8f124: add LB Factory v22 ABI

## 3.0.29

### Patch Changes

- e9fb16f: add monad addresses

## 3.0.28

### Patch Changes

- Updated dependencies [7a40830]
- Updated dependencies [f0683b0]
  - @traderjoe-xyz/sdk-core@2.0.13

## 3.0.27

### Patch Changes

- 1f4ce37: add monad
- Updated dependencies [1f4ce37]
  - @traderjoe-xyz/sdk-core@2.0.12

## 3.0.26

### Patch Changes

- 0e5f72b: add sonic
- Updated dependencies [0e5f72b]
  - @traderjoe-xyz/sdk-core@2.0.11

## 3.0.25

### Patch Changes

- 85276fe: fix monad testnet addresses

## 3.0.24

### Patch Changes

- ab05c71: add monad testnet addresses
- Updated dependencies [ab05c71]
  - @traderjoe-xyz/sdk-core@2.0.10

## 3.0.23

### Patch Changes

- a1e9168: add solana
- Updated dependencies [a1e9168]
  - @traderjoe-xyz/sdk-core@2.0.9

## 3.0.22

### Patch Changes

- 0aa58fe: add monad testnet
- Updated dependencies [0aa58fe]
  - @traderjoe-xyz/sdk-core@2.0.8

## 3.0.21

### Patch Changes

- 366535f: add base network
- Updated dependencies [366535f]
  - @traderjoe-xyz/sdk-core@2.0.7

## 3.0.20

### Patch Changes

- Updated dependencies [3a8328f]
  - @traderjoe-xyz/sdk-core@2.0.6

## 3.0.19

### Patch Changes

- 6af01a8: add berachain mainnet
- Updated dependencies [6af01a8]
  - @traderjoe-xyz/sdk-core@2.0.5

## 3.0.18

### Patch Changes

- Updated dependencies [cdcf75e]
  - @traderjoe-xyz/sdk-core@2.0.4

## 3.0.17

### Patch Changes

- 06fc276: add berachain artio
- Updated dependencies [06fc276]
  - @traderjoe-xyz/sdk-core@2.0.3

## 3.0.16

### Patch Changes

- 9bd2bd0: export liquidity helper v2 address

## 3.0.15

### Patch Changes

- a77c042: add liquidity helper v2

## 3.0.14

### Patch Changes

- c82ee73: update quoter v22 on mantle

## 3.0.13

### Patch Changes

- 3f6ca0c: update arbitrum router v21 address

## 3.0.12

### Patch Changes

- 6d89087: update arbitrum router address

## 3.0.11

### Patch Changes

- db652ea: update lb hook lens address

## 3.0.10

### Patch Changes

- 76fb1d0: fix vite
- Updated dependencies [76fb1d0]
  - @traderjoe-xyz/sdk-core@2.0.2

## 3.0.9

### Patch Changes

- 216d65b: fix sdk-v2 with Vite

## 3.0.8

### Patch Changes

- 4ce49f5: update lb hooks lens abi

## 3.0.7

### Patch Changes

- 9ee1953: add LBHooksLens ABI

## 3.0.6

### Patch Changes

- a347ba7: add v22

## 3.0.5

### Patch Changes

- e744663: update mantle addresses

## 3.0.4

### Patch Changes

- 83d17ba: update contract addresses

## 3.0.3

### Patch Changes

- 72c1ef4: update mantle quoter address

## 3.0.2

### Patch Changes

- c0407d8: add mantle addresses

## 3.0.1

### Patch Changes

- 6e905b7: bump viem to v2
- Updated dependencies [6e905b7]
  - @traderjoe-xyz/sdk-core@2.0.1

## 3.0.0

### Major Changes

- 9ab3159: add mantle chain id

### Patch Changes

- Updated dependencies [9ab3159]
  - @traderjoe-xyz/sdk-core@2.0.0

## 2.1.8

### Patch Changes

- 6d5a6e3: fix getCurveDistributionFromBinRange when sigma is 0

## 2.1.7

### Patch Changes

- 498eb52: fix get curve distribution params

## 2.1.6

### Patch Changes

- 75d84d4: rewrite get distribution params functions

## 2.1.5

### Patch Changes

- f8731f5: fix getUniformDistributionFromBinRange

## 2.1.4

### Patch Changes

- c8a3d73: expose contract address

## 2.1.3

### Patch Changes

- a774142: add apt-farm-lens addresses

## 2.1.2

### Patch Changes

- 6168dc8: add apt-farm-lens abi

## 2.1.1

### Patch Changes

- 29f2f07: fix eth dexcandles subgraph url

## 2.1.0

### Minor Changes

- 8065d41: Add support for Ethereum

### Patch Changes

- Updated dependencies [8065d41]
  - @traderjoe-xyz/sdk-core@1.1.0

## 2.0.12

### Patch Changes

- cd2ce5e: Update limit order manager and quoter v21 ABI

## 2.0.11

### Patch Changes

- dd56a09: Update limit order manager and v21 quoter addresses

## 2.0.10

### Patch Changes

- 2f2e1c4: Package release from mono-repo
- Updated dependencies [2f2e1c4]
  - @traderjoe-xyz/sdk-core@1.0.1
